logout + shop
